[tool.poetry]
name = "handy"
version = "0.1.0"
description = ""
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
mediapipe = "*"
pynput = "^1.7.1"
Xlib = "^0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
